--- a/integration/apps/rails-five/.envrc.sample
+++ b/integration/apps/rails-five/.envrc.sample
@@ -1,3 +1,3 @@
 export DD_API_KEY=<Your Datadog API key here>
 export DD_HOSTNAME=$(hostname)
-export RUBY_VERSION=<Ruby version you are testing>
+export RUBY_VERSION=2.7
