--- a/.github/workflows/lib-injection.yml
+++ b/.github/workflows/lib-injection.yml
@@ -57,3 +57,43 @@ jobs:
           docker-registry-username: ${{ github.repository_owner }}
           docker-registry-password: ${{ secrets.GITHUB_TOKEN }}
           test-script: ./lib-injection/run-manual-lib-injection.sh
+
+  test-negative:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        variant:
+          - dd-lib-ruby-init-test-rails-conflict
+          - dd-lib-ruby-init-test-rails-bundle-deploy
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Checkout system-tests
+        uses: actions/checkout@v3
+        with:
+          repository: DataDog/system-tests
+          path: system-tests
+      - name: Overwrite auto inject script with commit SHA
+        run: |
+          sed -i "s~<DD_TRACE_SHA_TO_BE_REPLACED>~${{github.sha}}~g" lib-injection/auto_inject.rb
+          sed -i "s~<DD_TRACE_VERSION_TO_BE_REPLACED>~~g" lib-injection/auto_inject.rb
+      - name: Build app
+        run: |
+          cp -r system-tests/lib-injection/build/docker/ruby/lib_injection_rails_app system-tests/lib-injection/build/docker/ruby/${{matrix.variant}}
+          cp system-tests/lib-injection/build/docker/ruby/.dockerignore system-tests/lib-injection/build/docker/ruby/${{matrix.variant}}
+          docker build -t ${{matrix.variant}} system-tests/lib-injection/build/docker/ruby/${{matrix.variant}}
+      - name: Run app with injection
+        run: |
+          docker run -d \
+            --name ${{matrix.variant}} \
+            -e RUBYOPT=-r/lib-injection/auto_inject \
+            -e DD_TRACE_DEBUG=true \
+            -v $(pwd)/lib-injection:/lib-injection \
+            -p 18080:18080 \
+            ${{matrix.variant}}
+      - name: Log container to see error message
+        run: |
+          sleep 5
+          docker logs ${{matrix.variant}}
+      - name: Send http request to ensure app remains running even with lib injection failure
+        run: curl -v --retry 10 -f --retry-all-errors --retry-delay 5 -s -o /dev/null http://localhost:18080
