--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           ruby-version: '3.1'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - run: bundle exec steep check
+      - run: bundle exec rake typecheck
